--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:00:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:00:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,9 +147,9 @@ body {
       <td>Shane Lowry -4
 -1 thru 5</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -163,7 +163,7 @@ Missed Cut</td>
       <td>Shane Lowry -4
 -1 thru 5</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td class="greyout leftborder">Tony Finau +4
@@ -211,7 +211,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td class="greyout leftborder">Russell Henley +7
@@ -227,7 +227,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Talor Gooch +1
 -1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -243,7 +243,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -259,7 +259,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Tyrrell Hatton +7
@@ -275,7 +275,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
@@ -293,7 +293,7 @@ Missed Cut</td>
       <td>Dustin Johnson(W) -1
 +1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 11</td>
       <td class="greyout">Louis Oosthuizen
@@ -305,7 +305,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Webb Simpson +2
@@ -323,7 +323,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Hideki Matsuyama E
 +3 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -337,7 +337,7 @@ E thru 7</td>
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 15</td>
       <td>Viktor Hovland +3
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -9
 -1 thru 4</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Jon Rahm +5
@@ -369,7 +369,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -9
 -1 thru 4</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Rory McIlroy +1
 -1 thru 15</td>
       <td>Patrick Cantlay +5
@@ -377,7 +377,7 @@ E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +5
 +3 thru 14</td>
       <td class="greyout">Robert MacIntyre +6
-+4 thru 12</td>
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -385,9 +385,9 @@ E thru 7</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Hideki Matsuyama E
 +3 thru 6</td>
       <td class="greyout leftborder">Marc Leishman +3
@@ -403,7 +403,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
@@ -433,7 +433,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Hideki Matsuyama E
 +3 thru 6</td>
       <td>Rory McIlroy(W) +1
@@ -449,9 +449,9 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -465,7 +465,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Hideki Matsuyama E
 +3 thru 6</td>
       <td>Talor Gooch +1
@@ -481,7 +481,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay(W) +5
@@ -495,9 +495,9 @@ Missed Cut</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-2</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Rory McIlroy +1
@@ -508,28 +508,12 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry(W) -4
--1 thru 5</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Joaquin Niemann E
-+1 thru 8</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Viktor Hovland +3
@@ -543,7 +527,7 @@ E thru 7</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Will Zalatoris E
@@ -556,12 +540,28 @@ E thru 7</td>
 +3 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry(W) -4
+-1 thru 5</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Joaquin Niemann +1
++2 thru 9</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Patrick Cantlay +5
@@ -593,7 +593,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners(W) -1
-E thru 7</td>
+E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Jon Rahm +5
@@ -639,7 +639,7 @@ Missed Cut</td>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Collin Morikawa(W) E
 +1 thru 8</td>
       <td>Rory McIlroy +1
@@ -655,7 +655,7 @@ Missed Cut</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Will Zalatoris E
@@ -671,9 +671,9 @@ Missed Cut</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">3</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Rory McIlroy +1
 -1 thru 15</td>
       <td>Jon Rahm(W) +5
@@ -689,7 +689,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Tiger Woods +4
 +3 thru 12</td>
       <td>Jon Rahm(W) +5
@@ -703,7 +703,7 @@ Missed Cut</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Viktor Hovland +3
@@ -719,7 +719,7 @@ Missed Cut</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Viktor Hovland +3
@@ -783,7 +783,7 @@ Missed Cut</td>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Hideki Matsuyama E
 +3 thru 6</td>
       <td>Jon Rahm(W) +5
@@ -815,7 +815,7 @@ Missed Cut</td>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">9</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 15</td>
       <td>Patrick Cantlay(W) +5
@@ -847,7 +847,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">10</td>
       <td>Corey Conners(W) -1
-E thru 7</td>
+E thru 8</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Jon Rahm +5
@@ -855,7 +855,7 @@ E thru 7</td>
       <td>Daniel Berger +6
 +4 thru 17</td>
       <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 12</td>
++4 thru 13</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -863,7 +863,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">11</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
