--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:00:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:00:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Shane Lowry -4
 -1 thru 5</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td class="greyout leftborder">Tony Finau +4
@@ -179,7 +179,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
@@ -189,15 +189,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas -2
--1 thru 9</td>
-      <td>Joaquin Niemann E
-+1 thru 8</td>
+-1 thru 10</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
+      <td>Joaquin Niemann +1
++2 thru 9</td>
       <td class="greyout leftborder">Rory McIlroy +1
 -1 thru 15</td>
       <td class="greyout">Viktor Hovland +3
@@ -209,9 +209,9 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -225,9 +225,9 @@ Missed Cut</td>
       <td>Shane Lowry -4
 -1 thru 5</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Jon Rahm +5
 +3 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +5
@@ -239,7 +239,7 @@ E thru 7</td>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Sungjae Im E
@@ -255,7 +255,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas(W) -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Will Zalatoris E
@@ -287,11 +287,11 @@ Missed Cut</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">5</td>
       <td>Justin Thomas -2
--1 thru 9</td>
+-1 thru 10</td>
       <td>Dustin Johnson -1
 +1 thru 7</td>
       <td>Corey Conners -1
-E thru 7</td>
+E thru 8</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -303,7 +303,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">10</td>
       <td>Corey Conners(W) -1
-E thru 7</td>
+E thru 8</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Jon Rahm +5
@@ -311,7 +311,7 @@ E thru 7</td>
       <td>Daniel Berger +6
 +4 thru 17</td>
       <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 12</td>
++4 thru 13</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
