--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:02:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:03:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -237,13 +237,13 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
-      <td>Sungjae Im E
-+3 thru 5</td>
+      <td>Sungjae Im +1
++4 thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
