--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:06:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:07:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ Missed Cut</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-15</td>
       <td>Scottie Scheffler -9
@@ -201,6 +185,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 12</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 5</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Will Zalatoris E
++1 thru 8</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -301,19 +301,19 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
       <td>Cameron Smith(W) -4
 -2 thru 8</td>
       <td>Corey Conners -1
 E thru 8</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Jon Rahm +5
-+3 thru 14</td>
+      <td class="greyout">Jon Rahm +6
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -326,8 +326,8 @@ E thru 8</td>
 +1 thru 8</td>
       <td>Webb Simpson +2
 +1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
-+3 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -365,34 +365,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -9
 -1 thru 5</td>
       <td>Corey Conners -1
 E thru 8</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
--2 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
-      <td class="greyout leftborder">Marc Leishman +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -406,10 +390,26 @@ E thru 8</td>
 -1 thru 16</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout">Robert MacIntyre +6
+      <td class="greyout leftborder">Robert MacIntyre +6
 +4 thru 13</td>
+      <td class="greyout">Jon Rahm +6
++4 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+-2 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td class="greyout leftborder">Marc Leishman +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -424,22 +424,6 @@ E thru 8</td>
 +4 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
-      <td>Rory McIlroy(W) +1
--1 thru 16</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -460,18 +444,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Rory McIlroy(W) +1
+-1 thru 16</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 12</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Corey Conners -1
 E thru 8</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
       <td>Talor Gooch +1
 -1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
-+3 thru 14</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -486,10 +486,10 @@ E thru 8</td>
 +1 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
-+3 thru 14</td>
-      <td class="greyout">Patrick Cantlay +5
+      <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +6
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -502,8 +502,8 @@ E thru 8</td>
 -1 (F)</td>
       <td>Patrick Cantlay(W) +5
 +4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -518,8 +518,8 @@ E thru 8</td>
 +1 thru 8</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -572,22 +572,6 @@ Missed Cut</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Corey Conners(W) -1
-E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) -9
@@ -620,16 +604,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Corey Conners(W) -1
+E thru 8</td>
+      <td>Will Zalatoris E
++1 thru 8</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Scottie Scheffler -9
 -1 thru 5</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -669,15 +669,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Corey Conners -1
 E thru 8</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -685,15 +685,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Corey Conners -1
 E thru 8</td>
       <td>Tiger Woods +4
 +3 thru 12</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -701,15 +701,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Bubba Watson +6
 +4 thru 14</td>
       <td class="greyout">Jordan Spieth
@@ -717,15 +717,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -733,15 +733,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -758,8 +758,8 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -774,24 +774,8 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">8</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -812,80 +796,96 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">10</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td>Patrick Cantlay +5
++4 thru 12</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
       <td>Patrick Cantlay(W) +5
 +4 thru 12</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">11</td>
+      <td>Corey Conners(W) -1
+E thru 8</td>
+      <td>Collin Morikawa E
++1 thru 8</td>
+      <td>Daniel Berger +6
++4 thru 17</td>
+      <td>Robert MacIntyre +6
++4 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa(W) E
 +1 thru 8</td>
-      <td>Hideki Matsuyama E
-+3 thru 6</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
-      <td>Corey Conners(W) -1
-E thru 8</td>
-      <td>Collin Morikawa E
-+1 thru 8</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td>Daniel Berger +6
-+4 thru 17</td>
-      <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 13</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Daniel Berger +6
+      <td>Daniel Berger +6
 +4 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
 +1 (F)</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Dustin Johnson -1
 +1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
