--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:06:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:07:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,22 +156,6 @@ body {
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
-      <td>Shane Lowry -5
--2 thru 6</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-11</td>
       <td>Shane Lowry -5
@@ -185,6 +169,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 +2 thru 11</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 5</td>
+      <td>Shane Lowry -5
+-2 thru 6</td>
+      <td>Will Zalatoris E
++1 thru 8</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -228,10 +228,10 @@ Missed Cut</td>
 -1 thru 10</td>
       <td>Corey Conners -1
 E thru 8</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
+      <td>Patrick Cantlay +5
 +4 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
       <td class="greyout">Tyrrell Hatton +7
 +5 thru 14</td>
     </tr>
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">11</td>
       <td>Corey Conners(W) -1
 E thru 8</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td>Daniel Berger +6
 +4 thru 17</td>
       <td class="greyout leftborder">Robert MacIntyre +6
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
 +1 (F)</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa E
 +1 thru 8</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Dustin Johnson -1
 +1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
