--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:09:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:10:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
       <td>Justin Thomas(W) -2
@@ -157,9 +157,9 @@ E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
       <td>Justin Thomas(W) -2
@@ -173,9 +173,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 6</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Will Zalatoris -1
@@ -189,9 +189,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
       <td>Cameron Smith(W) -4
@@ -205,9 +205,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Cameron Smith(W) -4
 -2 thru 8</td>
       <td>Corey Conners -1
@@ -221,9 +221,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Cameron Smith(W) -4
 -2 thru 8</td>
       <td>Corey Conners -1
@@ -237,9 +237,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Corey Conners -1
@@ -249,6 +249,22 @@ E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Tyrrell Hatton +6
++4 thru 15</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -265,22 +281,6 @@ E thru 9</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 +3 thru 12</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Tyrrell Hatton +6
-+4 thru 15</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -301,9 +301,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Corey Conners -1
 E thru 8</td>
       <td>Will Zalatoris -1
@@ -332,6 +332,38 @@ E thru 8</td>
 +4 thru 15</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Rory McIlroy +1
+-1 thru 16</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 12</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 6</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-8</td>
       <td>Shane Lowry -5
@@ -348,42 +380,10 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Rory McIlroy +1
--1 thru 16</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Will Zalatoris -1
-E thru 9</td>
-      <td>Jon Rahm +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 6</td>
       <td>Corey Conners -1
 E thru 8</td>
       <td>Rory McIlroy +1
@@ -413,9 +413,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Cameron Smith(W) -4
 -2 thru 8</td>
       <td>Matthew Fitzpatrick +3
@@ -454,8 +454,8 @@ Missed Cut</td>
 -1 thru 16</td>
       <td>Hideki Matsuyama +1
 +4 thru 7</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 13</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -474,6 +474,22 @@ E thru 9</td>
 +4 thru 12</td>
       <td class="greyout">Jon Rahm(W) +6
 +4 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +5
++4 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -508,22 +524,6 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay(W) +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 15</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -4
@@ -550,10 +550,10 @@ E thru 9</td>
 +1 thru 9</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td class="greyout leftborder">Tiger Woods(W) +3
++2 thru 13</td>
+      <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +4
-+3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -569,6 +569,22 @@ E thru 8</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 6</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Patrick Cantlay +5
++4 thru 12</td>
+      <td>Billy Horschel +10
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -588,16 +604,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td>Billy Horschel +10
-+7 (F)</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
+      <td>Rory McIlroy +1
+-1 thru 16</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -636,22 +652,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
-      <td>Rory McIlroy +1
--1 thru 16</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -2
@@ -662,9 +662,25 @@ Missed Cut</td>
 -1 thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 13</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Tiger Woods +3
++2 thru 13</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -681,22 +697,6 @@ E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">5</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Tiger Woods +4
-+3 thru 12</td>
-      <td>Jon Rahm(W) +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -781,9 +781,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">9</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
+      <td class="bigbold">8</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
       <td>Dustin Johnson -1
 +1 thru 7</td>
       <td>Patrick Cantlay +5
