--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:13:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:14:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -246,8 +246,8 @@ E thru 9</td>
 +1 thru 9</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +6
-+4 thru 17</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -308,10 +308,10 @@ E thru 8</td>
 +1 thru 9</td>
       <td>Jon Rahm +6
 +4 thru 15</td>
-      <td>Daniel Berger +6
-+4 thru 17</td>
-      <td class="greyout leftborder">Robert MacIntyre +6
+      <td>Robert MacIntyre +6
 +4 thru 14</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
