--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:13:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:14:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -834,12 +834,12 @@ Missed Cut</td>
 E thru 8</td>
       <td>Collin Morikawa E
 +1 thru 9</td>
-      <td>Daniel Berger +6
-+4 thru 17</td>
       <td>Robert MacIntyre +6
 +4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +6
+      <td>Jon Rahm +6
 +4 thru 15</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -868,10 +868,10 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
-      <td>Daniel Berger +6
-+4 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +6
+      <td>Jon Rahm +6
 +4 thru 15</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
