--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:15:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:15:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,22 +284,6 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-11</td>
-      <td>Shane Lowry -5
--2 thru 6</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Dustin Johnson(W) -1
-+1 thru 7</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler -10
@@ -313,6 +297,22 @@ E thru 9</td>
       <td class="greyout leftborder">Jon Rahm(W) +6
 +4 thru 15</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-10</td>
+      <td>Shane Lowry -5
+-2 thru 6</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Dustin Johnson(W) E
++2 thru 8</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 12</td>
+      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -540,22 +540,6 @@ E thru 9</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry(W) -5
--2 thru 6</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Joaquin Niemann +1
-+2 thru 9</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -10
@@ -585,6 +569,22 @@ E thru 8</td>
       <td class="greyout leftborder">Jon Rahm(W) +6
 +4 thru 15</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry(W) -5
+-2 thru 6</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Joaquin Niemann +2
++3 thru 10</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -636,22 +636,6 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">1</td>
-      <td>Shane Lowry -5
--2 thru 6</td>
-      <td>Dustin Johnson(W) -1
-+1 thru 7</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 12</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -2
@@ -665,6 +649,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Tiger Woods +3
 +2 thru 13</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">2</td>
+      <td>Shane Lowry -5
+-2 thru 6</td>
+      <td>Dustin Johnson(W) E
++2 thru 8</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 12</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -765,9 +765,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">8</td>
-      <td>Dustin Johnson -1
-+1 thru 7</td>
+      <td class="bigbold">9</td>
+      <td>Dustin Johnson E
++2 thru 8</td>
       <td>Rory McIlroy(W) +1
 -1 thru 16</td>
       <td>Viktor Hovland +3
@@ -781,11 +781,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Scottie Scheffler -10
 -2 thru 6</td>
-      <td>Dustin Johnson -1
-+1 thru 7</td>
+      <td>Dustin Johnson E
++2 thru 8</td>
       <td>Patrick Cantlay +5
 +4 thru 12</td>
       <td>Adam Scott +12
@@ -892,22 +892,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
-      <td>Dustin Johnson -1
-+1 thru 7</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td>Jon Rahm +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">15</td>
       <td>Collin Morikawa E
@@ -921,6 +905,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson E
++2 thru 8</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 12</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
