--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:15:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:15:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -196,10 +196,10 @@ Missed Cut</td>
 -1 thru 10</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
-      <td>Joaquin Niemann +1
-+2 thru 9</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 -1 thru 16</td>
+      <td class="greyout leftborder">Joaquin Niemann +2
++3 thru 10</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
     </tr>
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
-      <td>Dustin Johnson -1
-+1 thru 7</td>
       <td>Corey Conners -1
 E thru 8</td>
+      <td>Dustin Johnson E
++2 thru 8</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
-      <td>Dustin Johnson -1
-+1 thru 7</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson E
++2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
