--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:31:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:32:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -277,9 +277,9 @@ Missed Cut</td>
       <td>Will Zalatoris -1
 E thru 10</td>
       <td>Webb Simpson +1
-E thru 13</td>
-      <td class="greyout leftborder">Jon Rahm(W) +6
-+4 thru 16</td>
+E thru 14</td>
+      <td class="greyout leftborder">Jon Rahm(W) +8
++6 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -328,24 +328,8 @@ Missed Cut</td>
 +4 thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Jon Rahm +6
-+4 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
+      <td class="greyout">Jon Rahm +8
++6 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -359,9 +343,25 @@ Missed Cut</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
       <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 14</td>
-      <td class="greyout">Jon Rahm +6
-+4 thru 16</td>
++4 thru 15</td>
+      <td class="greyout">Jon Rahm +8
++6 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 7</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -440,8 +440,8 @@ E thru 10</td>
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +4
 +3 thru 13</td>
-      <td class="greyout">Jon Rahm(W) +6
-+4 thru 16</td>
+      <td class="greyout">Jon Rahm(W) +8
++6 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -454,8 +454,8 @@ E thru 10</td>
 -1 (F)</td>
       <td>Patrick Cantlay(W) +4
 +3 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -486,8 +486,8 @@ E thru 12</td>
 E thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -502,8 +502,8 @@ Missed Cut</td>
 +4 thru 8</td>
       <td>Talor Gooch +3
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +6
-+4 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm(W) +8
++6 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -521,22 +521,6 @@ E thru 12</td>
       <td class="greyout leftborder">Tiger Woods +3
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -5
--3 thru 10</td>
-      <td>Corey Conners(W) -3
--2 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -620,35 +604,19 @@ E thru 10</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-1</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
-      <td>Corey Conners -3
+      <td>Corey Conners(W) -3
 -2 thru 10</td>
-      <td>Tiger Woods +3
-+2 thru 14</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Sam Burns
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -684,19 +652,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Justin Thomas -1
-E thru 12</td>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -10
+-2 thru 7</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith -5
+-3 thru 10</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Tiger Woods +3
++2 thru 14</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -710,56 +694,40 @@ E thru 10</td>
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">5</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Justin Thomas -1
+E thru 12</td>
+      <td>Rory McIlroy +1
+-1 thru 17</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Bubba Watson +7
+      <td>Bubba Watson +7
 +5 thru 16</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas(W) -1
-E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas -1
-E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Jon Rahm(W) +8
++6 thru 17</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -774,8 +742,8 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -796,32 +764,64 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">9</td>
+      <td>Justin Thomas(W) -1
+E thru 12</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Corey Conners(W) -3
 -2 thru 10</td>
       <td>Collin Morikawa -1
 E thru 10</td>
       <td>Robert MacIntyre +6
-+4 thru 14</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Daniel Berger +7
++4 thru 15</td>
+      <td>Daniel Berger +7
 +5 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">9</td>
+      <td>Justin Thomas -1
+E thru 12</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa(W) -1
 E thru 10</td>
       <td>Hideki Matsuyama +1
 +4 thru 8</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Hideki Matsuyama +1
 +4 thru 8</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -845,15 +845,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
       <td>Patrick Cantlay(W) +4
 +3 thru 13</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -861,31 +861,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Daniel Berger +7
+      <td>Daniel Berger +7
 +5 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa -1
 E thru 10</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
 +1 (F)</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa -1
 E thru 10</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">17</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
