--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:31:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:32:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,22 +156,6 @@ E thru 10</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-12</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
-      <td>Shane Lowry -5
--2 thru 7</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-12</td>
       <td>Shane Lowry -5
@@ -185,6 +169,22 @@ E thru 10</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 +3 thru 13</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 7</td>
+      <td>Shane Lowry -5
+-2 thru 7</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -214,8 +214,8 @@ Missed Cut</td>
 E thru 12</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Tyrrell Hatton +9
 +7 thru 17</td>
     </tr>
@@ -301,31 +301,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Corey Conners(W) -3
 -2 thru 10</td>
       <td>Collin Morikawa -1
 E thru 10</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
       <td>Robert MacIntyre +6
-+4 thru 14</td>
-      <td class="greyout leftborder">Daniel Berger +7
++4 thru 15</td>
+      <td>Daniel Berger +7
 +5 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa -1
 E thru 10</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
 +1 (F)</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa -1
 E thru 10</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
+      <td>Jon Rahm(W) +8
++6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">17</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
+      <td>Jon Rahm +8
++6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
